Reduced image size for agenda to prevent clipping

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@
       text-align: center;
       padding: 0;
       margin-bottom: 15px;
-      font-size: 50px;
+      font-size: 25px;
       letter-spacing: -1px;
       color: white;
     }
